# Omni

./: .gitignore  AUDIT_CHANGELOG.md  AUDIT_TRACKER.md  DEMO.md  FINAL_AUDIT_STATUS.md  INSTALL_FIX.md  LICENSE  MODEL_BENCHMARK.md  Makefile  README.md  START_OMNI_V3.bat  START_OMNI_V3.ps1  emoji_😀.txt  fix_audio_settings.ps1  install.bat  install.ps1  install.sh  omni.py  package-lock.json  pyproject.toml  requirements-final-no-pyaudio.txt  requirements-hackathon-fixed.txt  requirements-hackathon.txt  requirements-minimal.txt  requirements.txt  run_dev_all.py  start.bat  start.sh  test_0.txt  test_10.txt  test_15.txt  test_20.txt  test_25.txt  test_30.txt  test_35.txt  test_40.txt  test_45.txt  test_5.txt
.omni_v2/: memory.db
.omni_v2/chroma/: chroma.sqlite3
_archive/v1_alternates/: app_v3_neumorphism.py  web_server.py
_archive/v1_docs/: 00-QUICKSTART-1ST-PLACE.md  04-Development-Roadmap.md  12-FINAL-FIXES.md  14-WHISPER-EMPTY-FIX.md  15-JARVIS-RESEARCH.md  21-PHASE-3-COMPLETE.md  23-PHASE-3.5-TURBO-COMPLETE.md  25-CPU-MODE-WAKEWORD-FIX.md  26-PHASE-3-FIXED-CPU-WAKEWORD.md  27-PHASE-3-FIXED-HEARING.md  33-PHASE-4-HARDENED-HACKATHON-WORTHY.md  40-GIT-LFS-FIX.md  41-WHISPER-FLOW-EXACT-CLONE.md  43-CODEBASE-REVIEW-TENSOR-DB-DIRECTIVES.md  44-COMPLETE-CODEBASE-AUDIT-AND-PRE-BUILD-GATE.md  AGI_BUILD.md
_archive/v1_scripts/: FIX_NOW.bat  FIX_ULTIMATE.bat  INSTALL_FOR_JUDGES.md  OMNI_V3_OBLITERATION_GUIDE.md  README_NEXT_FASTAPI.md
backend_fastapi/: main.py  requirements.txt
backend_fastapi/core/: brain.py
data/: memory.db  memory.json
data/chroma/: chroma.sqlite3
diagnostic/: 00_SUMMARY.md  01_DIAGNOSTIC_REPORT.md  02_FIXES_APPLIED.md  03_SMOKE_FIXES.md  04_SECURITY_HARDENING.md
docs/: 00-WHY-OMNI-V2.md  01-OMNI-Concept.md  02-Technical-Stack.md  03-Architecture.md  05-Demo-Script.md  06-Presentation-Slides.md  07-Enhancements-PRD.md  08-HACKATHON-WINNING-REPORT.md  09-WINNING-CHECKLIST.md  10-COMMANDS-TO-RUN.md  11-PYTHON312-FIX.md  13-TORCH-DLL-FIX.md  16-OMNI-V2-JARVIS-KILLER-PRD.md  17-PHASE-1-COMPLETE.md  18-PHASE-2-COMPLETE.md  19-PHASE-2-HARDENED.md  20-PHASE-3-STARTED.md  22-HF-TOKEN-LLAMA-CPP-TURBOVLM.md  24-HF-TURBO-FIX.md  28-PHASE-4-DEMO-VIDEO-SUBMISSION.md  29-SUBMISSION-CHECKLIST.md  30-PHASE-4-STT-ACCESSIBILITY.md  31-PHASE-4-STT-ACCESSIBILITY-FIXED.md  32-SECURITY-AUDIT-COMPETITOR-REVIEW.md  34-FIELD-TEST-HONEST-ASSESSMENT.md  35-TOOL-VERIFICATION.md  36-SETUP-WIZARD-PLAN.md  37-BAGILLION-PERCENT-LOOP.md  38-UI-SCOPE-HARDENED.md  39-PHASE-5-TAURI-HYBRID-FABLE-GPT-SOL.md  42-PHASE-6-AGI-HERMES-ORCHESTRATION-PRD.md  AIM.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEMO_VIDEO_SCRIPT.md  INDEX.md  PERFORMANCE.md  PHASE_1_DONE.md  PHASE_2_DONE.md  (+7 more)
frontend/: index.html  package.json
frontend/src/: App.svelte
frontend_next/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend_next/.next/: trace
frontend_next/app/: globals.css  layout.js  page.js
frontend_next/components/: ChatHistory.js  CinematicStage.js  MicBar.js  Orb.js
mobile/: app.js  index.html  manifest.json  qr.html  style.css  sw.js
omni/: __init__.py  app.py  cli.py
omni/core/: __init__.py  command_registry.py  config_manager.py  event_bus.py  intent_mapper.py  plugin_manager.py  reasoner.py
omni/plugins/: __init__.py  alpha_plugin.py  browser_plugin.py  integrations_plugin.py  omni_plugin.py  system_plugin.py  vscode_plugin.py  windows_plugin.py
omni/tts/: __init__.py  kokoro_tts.py
omni/ui/: __init__.py  orb.py  settings.py  tray.py
omni/utils/: __init__.py  logger.py  metrics.py
omni/voice/: __init__.py  audio_device.py  ptt_manager.py  transcriber.py  vad.py
omni_v2/: __init__.py  app.py  app_v3.py  web_server.py
omni_v2/agents/: __init__.py  demo_mode.py  evaluator.py  executor.py  geofence.py  memory.py  monitor.py  notification_prefs.py  notifications.py  onboarding.py  opinion.py  personality.py  planner.py  proactive.py  proactive_v2.py  scheduler.py  screen_watcher.py  stats.py  user_profile.py
omni_v2/core/: __init__.py  command_registry.py  config_manager.py  event_bus.py  guardrails.py  intent_mapper.py  paths.py  plugin_manager.py  safe_execute.py
omni_v2/llm/: __init__.py  brain.py  hf_downloader.py  llama_cpp.py  router.py
omni_v2/memory/: __init__.py  fast_af_store.py  session_memory.py  sqlite_store.py  vector_store.py
omni_v2/network/: __init__.py  discovery.py  mdns.py
omni_v2/pda/: __init__.py  app.py
omni_v2/sdk/: __init__.py
omni_v2/security/: __init__.py  face_auth.py
omni_v2/skills/: __init__.py  generator.py  marketplace.py  registry.py  verifier.py
omni_v2/sync/: __init__.py
omni_v2/tests/: test_demo_mode.py  test_fast_af_db.py  test_geofence.py  test_hermes_refinement.py  test_marketplace.py  test_mobile.py  test_network.py  test_notification_prefs.py  test_notifications.py  test_onboarding.py  test_opinion.py  test_personality.py  test_screen_watcher.py  test_security_guardrails.py  test_session_memory.py  test_skill_synthesis.py  test_stats.py  test_user_profile.py  test_vision.py  test_voice_clone.py
omni_v2/tools/: __init__.py  accessibility.py  ai.py  browser.py  browser_playwright.py  browser_v3.py  demo_scenarios.py  files.py  integrations.py  media.py  omni.py  send_to_phone.py  snooze.py  system.py  vscode.py  windows.py
omni_v2/ui/: __init__.py  dashboard.py  hud.py  hud_neomorphism.py  hud_simple.py  orb.py  orb_threejs.html  tray.py  whisper_flow.py
omni_v2/utils/: __init__.py  logger.py  utf8.py
omni_v2/vision/: __init__.py  llava.py  multimodal.py  screen.py  turbovlm.py
omni_v2/voice/: __init__.py  audio_device.py  audio_device_v3.py  loop.py  pipeline.py  pipeline_v3.py  pipeline_v3_fixed.py  ptt_manager.py  stt_manager.py  stt_simple.py  test_mic_fixed.py  tts_best.py  tts_simple.py  voice_clone.py  wake_word.py  wake_word_best.py  wake_word_v3.py
scripts/: cuda_check.py  download_models.py  fix-install.ps1  install.sh  launch-chrome.bat  launch-chrome.ps1  launch-omni.ps1  preflight.py  setup.ps1  test_stt.py  test_tts.py  whisper_diag.py
src-tauri/: Cargo.toml
(+31 files in other folders)
